Update: latest EMR JavaFX KCD database refactor